# smallshop

./: Cargo.toml  README.md  Rocket.toml
locales/en-US/: index.ftl  login.ftl  public_store_list-items.ftl  signup.ftl  store.ftl  store_add-item.ftl  store_list-items.ftl  store_show-basket.ftl
locales/fa/: index.ftl  login.ftl  public_store_list-items.ftl  signup.ftl  store.ftl  store_add-item.ftl  store_list-items.ftl  store_show-basket.ftl
migrations/2021-06-022015_create_products/: up.sql
migrations/2021-11-014517_create_users/: up.sql
src/: config.rs  diesel_pgsql.rs  login.rs  main.rs  models.rs  schema.rs  session.rs  signup.rs  store.rs
templates/: index.html.hbs  layout.html.hbs  login.html.hbs  nav.html.hbs  public_store_list-items.html.hbs  signup.html.hbs  store.html.hbs  store_add-item.html.hbs  store_list-items.html.hbs  store_show-basket.html.hbs  store_update-item.html.hbs
